github pages release

--- a/classes/jsonschematotypes.html
+++ b/classes/jsonschematotypes.html
@@ -136,19 +136,19 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Json<wbr>Schema<wbr>ToTypes<span class="tsd-signature-symbol">(</span>s<span class="tsd-signature-symbol">: </span><a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="jsonschematotypes.html" class="tsd-signature-type">JsonSchemaToTypes</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Json<wbr>Schema<wbr>ToTypes<span class="tsd-signature-symbol">(</span>s<span class="tsd-signature-symbol">: </span><a href="../interfaces/jsonschema.html" class="tsd-signature-type">JSONSchema</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/jsonschema.html" class="tsd-signature-type">JSONSchema</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="jsonschematotypes.html" class="tsd-signature-type">JsonSchemaToTypes</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/ef07286/src/index.ts#L15">src/index.ts:15</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/789ea5c/src/index.ts#L15">src/index.ts:15</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>s: <a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a><span class="tsd-signature-symbol">[]</span></h5>
+									<h5>s: <a href="../interfaces/jsonschema.html" class="tsd-signature-type">JSONSchema</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/jsonschema.html" class="tsd-signature-type">JSONSchema</a><span class="tsd-signature-symbol">[]</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <a href="jsonschematotypes.html" class="tsd-signature-type">JsonSchemaToTypes</a></h4>
@@ -161,10 +161,10 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="megaschema" class="tsd-anchor"></a>
 					<h3>mega<wbr>Schema</h3>
-					<div class="tsd-signature tsd-kind-icon">mega<wbr>Schema<span class="tsd-signature-symbol">:</span> <a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a></div>
+					<div class="tsd-signature tsd-kind-icon">mega<wbr>Schema<span class="tsd-signature-symbol">:</span> <a href="../interfaces/jsonschema.html" class="tsd-signature-type">JSONSchema</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/ef07286/src/index.ts#L15">src/index.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/789ea5c/src/index.ts#L15">src/index.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -181,7 +181,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/ef07286/src/index.ts#L32">src/index.ts:32</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/789ea5c/src/index.ts#L32">src/index.ts:32</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -212,7 +212,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/ef07286/src/index.ts#L134">src/index.ts:134</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/789ea5c/src/index.ts#L134">src/index.ts:134</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -240,7 +240,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/ef07286/src/index.ts#L121">src/index.ts:121</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/789ea5c/src/index.ts#L121">src/index.ts:121</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -271,7 +271,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/ef07286/src/index.ts#L108">src/index.ts:108</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/789ea5c/src/index.ts#L108">src/index.ts:108</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -299,7 +299,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/ef07286/src/index.ts#L95">src/index.ts:95</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/789ea5c/src/index.ts#L95">src/index.ts:95</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -327,7 +327,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/ef07286/src/index.ts#L82">src/index.ts:82</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/789ea5c/src/index.ts#L82">src/index.ts:82</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -355,7 +355,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/ef07286/src/index.ts#L69">src/index.ts:69</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/789ea5c/src/index.ts#L69">src/index.ts:69</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -386,7 +386,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/ef07286/src/index.ts#L56">src/index.ts:56</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/789ea5c/src/index.ts#L56">src/index.ts:56</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -413,7 +413,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/ef07286/src/index.ts#L45">src/index.ts:45</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/789ea5c/src/index.ts#L45">src/index.ts:45</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
