--- a/interfaces/components.html
+++ b/interfaces/components.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ContentDescriptorObject | @open-rpc/schema-utils-js</title>
+	<title>Components | @open-rpc/schema-utils-js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="contentdescriptorobject.html">ContentDescriptorObject</a>
+					<a href="components.html">Components</a>
 				</li>
 			</ul>
-			<h1>Interface ContentDescriptorObject</h1>
+			<h1>Interface Components</h1>
 		</div>
 	</div>
 </header>
@@ -68,9 +68,13 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">ContentDescriptorObject</span>
+						<span class="target">Components</span>
 					</li>
 				</ul>
+			</section>
+			<section class="tsd-panel tsd-kind-interface tsd-is-external">
+				<h3 class="tsd-before-signature">Indexable</h3>
+				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>k: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
 			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
@@ -79,11 +83,12 @@
 						<section class="tsd-index-section tsd-is-external">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#description" class="tsd-kind-icon">description</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#name" class="tsd-kind-icon">name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#required" class="tsd-kind-icon">required</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#schema" class="tsd-kind-icon">schema</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#summary" class="tsd-kind-icon">summary</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="components.html#contentdescriptors" class="tsd-kind-icon">content<wbr>Descriptors</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="components.html#examplepairings" class="tsd-kind-icon">example<wbr>Pairings</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="components.html#examples" class="tsd-kind-icon">examples</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="components.html#links" class="tsd-kind-icon">links</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="components.html#schemas" class="tsd-kind-icon">schemas</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="components.html#tags" class="tsd-kind-icon">tags</a></li>
 							</ul>
 						</section>
 					</div>
@@ -92,52 +97,62 @@
 			<section class="tsd-panel-group tsd-member-group tsd-is-external">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="description" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> description</h3>
-					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <a href="../globals.html#contentdescriptorobjectdescription" class="tsd-signature-type">ContentDescriptorObjectDescription</a></div>
+					<a name="contentdescriptors" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> content<wbr>Descriptors</h3>
+					<div class="tsd-signature tsd-kind-icon">content<wbr>Descriptors<span class="tsd-signature-symbol">:</span> <a href="contentdescriptorcomponents.html" class="tsd-signature-type">ContentDescriptorComponents</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:180</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:296</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="name" class="tsd-anchor"></a>
-					<h3>name</h3>
-					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <a href="../globals.html#contentdescriptorobjectname" class="tsd-signature-type">ContentDescriptorObjectName</a></div>
+					<a name="examplepairings" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> example<wbr>Pairings</h3>
+					<div class="tsd-signature tsd-kind-icon">example<wbr>Pairings<span class="tsd-signature-symbol">:</span> <a href="examplepairingcomponents.html" class="tsd-signature-type">ExamplePairingComponents</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:179</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:295</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="required" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> required</h3>
-					<div class="tsd-signature tsd-kind-icon">required<span class="tsd-signature-symbol">:</span> <a href="../globals.html#contentdescriptorobjectrequired" class="tsd-signature-type">ContentDescriptorObjectRequired</a></div>
+					<a name="examples" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> examples</h3>
+					<div class="tsd-signature tsd-kind-icon">examples<span class="tsd-signature-symbol">:</span> <a href="examplecomponents.html" class="tsd-signature-type">ExampleComponents</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:183</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:294</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="schema" class="tsd-anchor"></a>
-					<h3>schema</h3>
-					<div class="tsd-signature tsd-kind-icon">schema<span class="tsd-signature-symbol">:</span> <a href="jsonschema.html" class="tsd-signature-type">JSONSchema</a></div>
+					<a name="links" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> links</h3>
+					<div class="tsd-signature tsd-kind-icon">links<span class="tsd-signature-symbol">:</span> <a href="linkcomponents.html" class="tsd-signature-type">LinkComponents</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:182</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:293</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="summary" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> summary</h3>
-					<div class="tsd-signature tsd-kind-icon">summary<span class="tsd-signature-symbol">:</span> <a href="../globals.html#contentdescriptorobjectsummary" class="tsd-signature-type">ContentDescriptorObjectSummary</a></div>
+					<a name="schemas" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> schemas</h3>
+					<div class="tsd-signature tsd-kind-icon">schemas<span class="tsd-signature-symbol">:</span> <a href="schemacomponents.html" class="tsd-signature-type">SchemaComponents</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:181</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:292</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+					<a name="tags" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> tags</h3>
+					<div class="tsd-signature tsd-kind-icon">tags<span class="tsd-signature-symbol">:</span> <a href="tagcomponents.html" class="tsd-signature-type">TagComponents</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:297</li>
 						</ul>
 					</aside>
 				</section>
@@ -156,22 +171,25 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-is-external">
-						<a href="contentdescriptorobject.html" class="tsd-kind-icon">Content<wbr>Descriptor<wbr>Object</a>
+						<a href="components.html" class="tsd-kind-icon">Components</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#description" class="tsd-kind-icon">description</a>
+								<a href="components.html#contentdescriptors" class="tsd-kind-icon">content<wbr>Descriptors</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#name" class="tsd-kind-icon">name</a>
+								<a href="components.html#examplepairings" class="tsd-kind-icon">example<wbr>Pairings</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#required" class="tsd-kind-icon">required</a>
+								<a href="components.html#examples" class="tsd-kind-icon">examples</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#schema" class="tsd-kind-icon">schema</a>
+								<a href="components.html#links" class="tsd-kind-icon">links</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#summary" class="tsd-kind-icon">summary</a>
+								<a href="components.html#schemas" class="tsd-kind-icon">schemas</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+								<a href="components.html#tags" class="tsd-kind-icon">tags</a>
 							</li>
 						</ul>
 					</li>
