--- a/interfaces/contentdescriptorcomponents.html
+++ b/interfaces/contentdescriptorcomponents.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ContentDescriptorObject | @open-rpc/schema-utils-js</title>
+	<title>ContentDescriptorComponents | @open-rpc/schema-utils-js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="contentdescriptorobject.html">ContentDescriptorObject</a>
+					<a href="contentdescriptorcomponents.html">ContentDescriptorComponents</a>
 				</li>
 			</ul>
-			<h1>Interface ContentDescriptorObject</h1>
+			<h1>Interface ContentDescriptorComponents</h1>
 		</div>
 	</div>
 </header>
@@ -68,79 +68,13 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">ContentDescriptorObject</span>
+						<span class="target">ContentDescriptorComponents</span>
 					</li>
 				</ul>
 			</section>
-			<section class="tsd-panel-group tsd-index-group">
-				<h2>Index</h2>
-				<section class="tsd-panel tsd-index-panel">
-					<div class="tsd-index-content">
-						<section class="tsd-index-section tsd-is-external">
-							<h3>Properties</h3>
-							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#description" class="tsd-kind-icon">description</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#name" class="tsd-kind-icon">name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#required" class="tsd-kind-icon">required</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#schema" class="tsd-kind-icon">schema</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#summary" class="tsd-kind-icon">summary</a></li>
-							</ul>
-						</section>
-					</div>
-				</section>
-			</section>
-			<section class="tsd-panel-group tsd-member-group tsd-is-external">
-				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="description" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> description</h3>
-					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <a href="../globals.html#contentdescriptorobjectdescription" class="tsd-signature-type">ContentDescriptorObjectDescription</a></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:180</li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="name" class="tsd-anchor"></a>
-					<h3>name</h3>
-					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <a href="../globals.html#contentdescriptorobjectname" class="tsd-signature-type">ContentDescriptorObjectName</a></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:179</li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="required" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> required</h3>
-					<div class="tsd-signature tsd-kind-icon">required<span class="tsd-signature-symbol">:</span> <a href="../globals.html#contentdescriptorobjectrequired" class="tsd-signature-type">ContentDescriptorObjectRequired</a></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:183</li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="schema" class="tsd-anchor"></a>
-					<h3>schema</h3>
-					<div class="tsd-signature tsd-kind-icon">schema<span class="tsd-signature-symbol">:</span> <a href="jsonschema.html" class="tsd-signature-type">JSONSchema</a></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:182</li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="summary" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> summary</h3>
-					<div class="tsd-signature tsd-kind-icon">summary<span class="tsd-signature-symbol">:</span> <a href="../globals.html#contentdescriptorobjectsummary" class="tsd-signature-type">ContentDescriptorObjectSummary</a></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:181</li>
-						</ul>
-					</aside>
-				</section>
+			<section class="tsd-panel tsd-kind-interface tsd-is-external">
+				<h3 class="tsd-before-signature">Indexable</h3>
+				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>key: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
 			</section>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
@@ -156,24 +90,7 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-is-external">
-						<a href="contentdescriptorobject.html" class="tsd-kind-icon">Content<wbr>Descriptor<wbr>Object</a>
-						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#description" class="tsd-kind-icon">description</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#name" class="tsd-kind-icon">name</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#required" class="tsd-kind-icon">required</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#schema" class="tsd-kind-icon">schema</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#summary" class="tsd-kind-icon">summary</a>
-							</li>
-						</ul>
+						<a href="contentdescriptorcomponents.html" class="tsd-kind-icon">Content<wbr>Descriptor<wbr>Components</a>
 					</li>
 				</ul>
 				<ul class="after-current">
