--- a/interfaces/serverobject.html
+++ b/interfaces/serverobject.html
@@ -72,16 +72,6 @@
 					</li>
 				</ul>
 			</section>
-			<section class="tsd-panel tsd-kind-interface tsd-is-external">
-				<h3 class="tsd-before-signature">Indexable</h3>
-				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>k: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
-				<div class="tsd-comment tsd-typography">
-					<div class="lead">
-						<p>This interface was referenced by <code>ServerObject</code>&#39;s JSON-Schema definition
-						via the <code>patternProperty</code> &quot;^x-&quot;.</p>
-					</div>
-				</div>
-			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
@@ -104,50 +94,50 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="description" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> description</h3>
-					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <a href="../globals.html#serverobjectdescription" class="tsd-signature-type">ServerObjectDescription</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:92</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:36</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="name" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> name</h3>
-					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <a href="../globals.html#serverobjectname" class="tsd-signature-type">ServerObjectName</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:91</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:35</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="summary" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> summary</h3>
-					<div class="tsd-signature tsd-kind-icon">summary<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">summary<span class="tsd-signature-symbol">:</span> <a href="../globals.html#serverobjectsummary" class="tsd-signature-type">ServerObjectSummary</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:93</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:37</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="url" class="tsd-anchor"></a>
 					<h3>url</h3>
-					<div class="tsd-signature tsd-kind-icon">url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">url<span class="tsd-signature-symbol">:</span> <a href="../globals.html#serverobjecturl" class="tsd-signature-type">ServerObjectUrl</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:90</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:34</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="variables" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> variables</h3>
-					<div class="tsd-signature tsd-kind-icon">variables<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">object</span></div>
+					<div class="tsd-signature tsd-kind-icon">variables<span class="tsd-signature-symbol">:</span> <a href="serverobjectvariables.html" class="tsd-signature-type">ServerObjectVariables</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:94</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:38</li>
 						</ul>
 					</aside>
 				</section>
