--- a/classes/codegen.html
+++ b/classes/codegen.html
@@ -120,19 +120,19 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Code<wbr>Gen<span class="tsd-signature-symbol">(</span>schema<span class="tsd-signature-symbol">: </span><a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="codegen.html" class="tsd-signature-type">CodeGen</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Code<wbr>Gen<span class="tsd-signature-symbol">(</span>schema<span class="tsd-signature-symbol">: </span><a href="../interfaces/jsonschema.html" class="tsd-signature-type">JSONSchema</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="codegen.html" class="tsd-signature-type">CodeGen</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/ef07286/src/codegens/codegen.ts#L14">src/codegens/codegen.ts:14</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/789ea5c/src/codegens/codegen.ts#L14">src/codegens/codegen.ts:14</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>schema: <a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a></h5>
+									<h5>schema: <a href="../interfaces/jsonschema.html" class="tsd-signature-type">JSONSchema</a></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <a href="codegen.html" class="tsd-signature-type">CodeGen</a></h4>
@@ -152,7 +152,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/ef07286/src/codegens/codegen.ts#L44">src/codegens/codegen.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/789ea5c/src/codegens/codegen.ts#L44">src/codegens/codegen.ts:44</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
@@ -169,7 +169,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/ef07286/src/codegens/codegen.ts#L40">src/codegens/codegen.ts:40</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/789ea5c/src/codegens/codegen.ts#L40">src/codegens/codegen.ts:40</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -198,7 +198,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/ef07286/src/codegens/codegen.ts#L20">src/codegens/codegen.ts:20</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/789ea5c/src/codegens/codegen.ts#L20">src/codegens/codegen.ts:20</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
