--- a/classes/notitleerror.html
+++ b/classes/notitleerror.html
@@ -112,25 +112,25 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>NoTitle<wbr>Error<span class="tsd-signature-symbol">(</span>schema<span class="tsd-signature-symbol">: </span><a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a>, subSchemaKey<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, subschema<span class="tsd-signature-symbol">: </span><a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="notitleerror.html" class="tsd-signature-type">NoTitleError</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>NoTitle<wbr>Error<span class="tsd-signature-symbol">(</span>schema<span class="tsd-signature-symbol">: </span><a href="../interfaces/jsonschema.html" class="tsd-signature-type">JSONSchema</a>, subSchemaKey<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, subschema<span class="tsd-signature-symbol">: </span><a href="../interfaces/jsonschema.html" class="tsd-signature-type">JSONSchema</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="notitleerror.html" class="tsd-signature-type">NoTitleError</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/ef07286/src/ensure-subschema-titles.ts#L6">src/ensure-subschema-titles.ts:6</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/789ea5c/src/ensure-subschema-titles.ts#L6">src/ensure-subschema-titles.ts:6</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>schema: <a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a></h5>
+									<h5>schema: <a href="../interfaces/jsonschema.html" class="tsd-signature-type">JSONSchema</a></h5>
 								</li>
 								<li>
 									<h5>subSchemaKey: <span class="tsd-signature-type">string</span></h5>
 								</li>
 								<li>
-									<h5>subschema: <a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a></h5>
+									<h5>subschema: <a href="../interfaces/jsonschema.html" class="tsd-signature-type">JSONSchema</a></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <a href="notitleerror.html" class="tsd-signature-type">NoTitleError</a></h4>
