--- a/interfaces/examplepairingobject.html
+++ b/interfaces/examplepairingobject.html
@@ -64,14 +64,6 @@
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
-			<section class="tsd-panel tsd-comment">
-				<div class="tsd-comment tsd-typography">
-					<div class="lead">
-						<p>This interface was referenced by <code>undefined</code>&#39;s JSON-Schema definition
-						via the <code>patternProperty</code> &quot;[0-z]+&quot;.</p>
-					</div>
-				</div>
-			</section>
 			<section class="tsd-panel tsd-hierarchy">
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
@@ -83,12 +75,6 @@
 			<section class="tsd-panel tsd-kind-interface tsd-is-external">
 				<h3 class="tsd-before-signature">Indexable</h3>
 				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>k: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
-				<div class="tsd-comment tsd-typography">
-					<div class="lead">
-						<p>This interface was referenced by <code>undefined</code>&#39;s JSON-Schema definition
-						via the <code>patternProperty</code> &quot;[0-z]+&quot;.</p>
-					</div>
-				</div>
 			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
@@ -111,40 +97,40 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="description" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> description</h3>
-					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <a href="../globals.html#examplepairingobjectdescription" class="tsd-signature-type">ExamplePairingObjectDescription</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:235</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:263</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="name" class="tsd-anchor"></a>
 					<h3>name</h3>
-					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <a href="../globals.html#examplepairingobjectname" class="tsd-signature-type">ExamplePairingObjectName</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:234</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:262</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="params" class="tsd-anchor"></a>
 					<h3>params</h3>
-					<div class="tsd-signature tsd-kind-icon">params<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><a href="referenceobject.html" class="tsd-signature-type">ReferenceObject</a><span class="tsd-signature-symbol"> | </span><a href="exampleobject.html" class="tsd-signature-type">ExampleObject</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">[]</span></div>
+					<div class="tsd-signature tsd-kind-icon">params<span class="tsd-signature-symbol">:</span> <a href="../globals.html#examplepairingobjectparams" class="tsd-signature-type">ExamplePairingObjectParams</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:236</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:264</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="result" class="tsd-anchor"></a>
 					<h3>result</h3>
-					<div class="tsd-signature tsd-kind-icon">result<span class="tsd-signature-symbol">:</span> <a href="exampleobject.html" class="tsd-signature-type">ExampleObject</a><span class="tsd-signature-symbol"> | </span><a href="referenceobject.html" class="tsd-signature-type">ReferenceObject</a></div>
+					<div class="tsd-signature tsd-kind-icon">result<span class="tsd-signature-symbol">:</span> <a href="../globals.html#examplepairingobjectresult" class="tsd-signature-type">ExamplePairingObjectresult</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:237</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:265</li>
 						</ul>
 					</aside>
 				</section>
