--- a/interfaces/infoobject.html
+++ b/interfaces/infoobject.html
@@ -72,16 +72,6 @@
 					</li>
 				</ul>
 			</section>
-			<section class="tsd-panel tsd-kind-interface tsd-is-external">
-				<h3 class="tsd-before-signature">Indexable</h3>
-				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>k: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
-				<div class="tsd-comment tsd-typography">
-					<div class="lead">
-						<p>This interface was referenced by <code>InfoObject</code>&#39;s JSON-Schema definition
-						via the <code>patternProperty</code> &quot;^x-&quot;.</p>
-					</div>
-				</div>
-			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
@@ -108,17 +98,17 @@
 					<div class="tsd-signature tsd-kind-icon">contact<span class="tsd-signature-symbol">:</span> <a href="contactobject.html" class="tsd-signature-type">ContactObject</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:62</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:25</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="description" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> description</h3>
-					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <a href="../globals.html#infoobjectdescription" class="tsd-signature-type">InfoObjectDescription</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:59</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:22</li>
 						</ul>
 					</aside>
 				</section>
@@ -128,37 +118,37 @@
 					<div class="tsd-signature tsd-kind-icon">license<span class="tsd-signature-symbol">:</span> <a href="licenseobject.html" class="tsd-signature-type">LicenseObject</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:63</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:26</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="termsofservice" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> terms<wbr>OfService</h3>
-					<div class="tsd-signature tsd-kind-icon">terms<wbr>OfService<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">terms<wbr>OfService<span class="tsd-signature-symbol">:</span> <a href="../globals.html#infoobjecttermsofservice" class="tsd-signature-type">InfoObjectTermsOfService</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:60</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:23</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="title" class="tsd-anchor"></a>
 					<h3>title</h3>
-					<div class="tsd-signature tsd-kind-icon">title<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">title<span class="tsd-signature-symbol">:</span> <a href="../globals.html#infoobjectproperties" class="tsd-signature-type">InfoObjectProperties</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:58</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:21</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="version" class="tsd-anchor"></a>
 					<h3>version</h3>
-					<div class="tsd-signature tsd-kind-icon">version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">version<span class="tsd-signature-symbol">:</span> <a href="../globals.html#infoobjectversion" class="tsd-signature-type">InfoObjectVersion</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:61</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:24</li>
 						</ul>
 					</aside>
 				</section>
