--- a/interfaces/linkobjectserver.html
+++ b/interfaces/linkobjectserver.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ContentDescriptorObject | @open-rpc/schema-utils-js</title>
+	<title>LinkObjectServer | @open-rpc/schema-utils-js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="contentdescriptorobject.html">ContentDescriptorObject</a>
+					<a href="linkobjectserver.html">LinkObjectServer</a>
 				</li>
 			</ul>
-			<h1>Interface ContentDescriptorObject</h1>
+			<h1>Interface LinkObjectServer</h1>
 		</div>
 	</div>
 </header>
@@ -68,7 +68,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">ContentDescriptorObject</span>
+						<span class="target">LinkObjectServer</span>
 					</li>
 				</ul>
 			</section>
@@ -79,11 +79,11 @@
 						<section class="tsd-index-section tsd-is-external">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#description" class="tsd-kind-icon">description</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#name" class="tsd-kind-icon">name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#required" class="tsd-kind-icon">required</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#schema" class="tsd-kind-icon">schema</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#summary" class="tsd-kind-icon">summary</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="linkobjectserver.html#description" class="tsd-kind-icon">description</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="linkobjectserver.html#name" class="tsd-kind-icon">name</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="linkobjectserver.html#summary" class="tsd-kind-icon">summary</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="linkobjectserver.html#url" class="tsd-kind-icon">url</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="linkobjectserver.html#variables" class="tsd-kind-icon">variables</a></li>
 							</ul>
 						</section>
 					</div>
@@ -94,50 +94,50 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="description" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> description</h3>
-					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <a href="../globals.html#contentdescriptorobjectdescription" class="tsd-signature-type">ContentDescriptorObjectDescription</a></div>
+					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <a href="../globals.html#serverobjectdescription" class="tsd-signature-type">ServerObjectDescription</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:180</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:231</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="name" class="tsd-anchor"></a>
-					<h3>name</h3>
-					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <a href="../globals.html#contentdescriptorobjectname" class="tsd-signature-type">ContentDescriptorObjectName</a></div>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> name</h3>
+					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <a href="../globals.html#serverobjectname" class="tsd-signature-type">ServerObjectName</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:179</li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="required" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> required</h3>
-					<div class="tsd-signature tsd-kind-icon">required<span class="tsd-signature-symbol">:</span> <a href="../globals.html#contentdescriptorobjectrequired" class="tsd-signature-type">ContentDescriptorObjectRequired</a></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:183</li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="schema" class="tsd-anchor"></a>
-					<h3>schema</h3>
-					<div class="tsd-signature tsd-kind-icon">schema<span class="tsd-signature-symbol">:</span> <a href="jsonschema.html" class="tsd-signature-type">JSONSchema</a></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:182</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:230</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="summary" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> summary</h3>
-					<div class="tsd-signature tsd-kind-icon">summary<span class="tsd-signature-symbol">:</span> <a href="../globals.html#contentdescriptorobjectsummary" class="tsd-signature-type">ContentDescriptorObjectSummary</a></div>
+					<div class="tsd-signature tsd-kind-icon">summary<span class="tsd-signature-symbol">:</span> <a href="../globals.html#serverobjectsummary" class="tsd-signature-type">ServerObjectSummary</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:181</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:232</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+					<a name="url" class="tsd-anchor"></a>
+					<h3>url</h3>
+					<div class="tsd-signature tsd-kind-icon">url<span class="tsd-signature-symbol">:</span> <a href="../globals.html#serverobjecturl" class="tsd-signature-type">ServerObjectUrl</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:229</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+					<a name="variables" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> variables</h3>
+					<div class="tsd-signature tsd-kind-icon">variables<span class="tsd-signature-symbol">:</span> <a href="serverobjectvariables.html" class="tsd-signature-type">ServerObjectVariables</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:233</li>
 						</ul>
 					</aside>
 				</section>
@@ -156,22 +156,22 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-is-external">
-						<a href="contentdescriptorobject.html" class="tsd-kind-icon">Content<wbr>Descriptor<wbr>Object</a>
+						<a href="linkobjectserver.html" class="tsd-kind-icon">Link<wbr>Object<wbr>Server</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#description" class="tsd-kind-icon">description</a>
+								<a href="linkobjectserver.html#description" class="tsd-kind-icon">description</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#name" class="tsd-kind-icon">name</a>
+								<a href="linkobjectserver.html#name" class="tsd-kind-icon">name</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#required" class="tsd-kind-icon">required</a>
+								<a href="linkobjectserver.html#summary" class="tsd-kind-icon">summary</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#schema" class="tsd-kind-icon">schema</a>
+								<a href="linkobjectserver.html#url" class="tsd-kind-icon">url</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#summary" class="tsd-kind-icon">summary</a>
+								<a href="linkobjectserver.html#variables" class="tsd-kind-icon">variables</a>
 							</li>
 						</ul>
 					</li>
