--- a/interfaces/objectwrpyybus.html
+++ b/interfaces/objectwrpyybus.html
@@ -81,7 +81,7 @@
 					</li>
 				</ul>
 			</section>
-			<section class="tsd-panel tsd-kind-interface">
+			<section class="tsd-panel tsd-kind-interface tsd-is-external">
 				<h3 class="tsd-before-signature">Indexable</h3>
 				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>key: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
 			</section>
@@ -98,7 +98,7 @@
 				<ul class="before-current">
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-interface">
+					<li class="current tsd-kind-interface tsd-is-external">
 						<a href="objectwrpyybus.html" class="tsd-kind-icon">Object<wbr>WrpyYBUS</a>
 					</li>
 				</ul>
