--- a/interfaces/openrpcdocument.html
+++ b/interfaces/openrpcdocument.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ContentDescriptorObject | @open-rpc/schema-utils-js</title>
+	<title>OpenrpcDocument | @open-rpc/schema-utils-js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="contentdescriptorobject.html">ContentDescriptorObject</a>
+					<a href="openrpcdocument.html">OpenrpcDocument</a>
 				</li>
 			</ul>
-			<h1>Interface ContentDescriptorObject</h1>
+			<h1>Interface OpenrpcDocument</h1>
 		</div>
 	</div>
 </header>
@@ -68,7 +68,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">ContentDescriptorObject</span>
+						<span class="target">OpenrpcDocument</span>
 					</li>
 				</ul>
 			</section>
@@ -79,11 +79,11 @@
 						<section class="tsd-index-section tsd-is-external">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#description" class="tsd-kind-icon">description</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#name" class="tsd-kind-icon">name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#required" class="tsd-kind-icon">required</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#schema" class="tsd-kind-icon">schema</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="contentdescriptorobject.html#summary" class="tsd-kind-icon">summary</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="openrpcdocument.html#components" class="tsd-kind-icon">components</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="openrpcdocument.html#info" class="tsd-kind-icon">info</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="openrpcdocument.html#methods" class="tsd-kind-icon">methods</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="openrpcdocument.html#openrpc" class="tsd-kind-icon">openrpc</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="openrpcdocument.html#servers" class="tsd-kind-icon">servers</a></li>
 							</ul>
 						</section>
 					</div>
@@ -92,52 +92,52 @@
 			<section class="tsd-panel-group tsd-member-group tsd-is-external">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="description" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> description</h3>
-					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <a href="../globals.html#contentdescriptorobjectdescription" class="tsd-signature-type">ContentDescriptorObjectDescription</a></div>
+					<a name="components" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> components</h3>
+					<div class="tsd-signature tsd-kind-icon">components<span class="tsd-signature-symbol">:</span> <a href="components.html" class="tsd-signature-type">Components</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:180</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:305</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="name" class="tsd-anchor"></a>
-					<h3>name</h3>
-					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <a href="../globals.html#contentdescriptorobjectname" class="tsd-signature-type">ContentDescriptorObjectName</a></div>
+					<a name="info" class="tsd-anchor"></a>
+					<h3>info</h3>
+					<div class="tsd-signature tsd-kind-icon">info<span class="tsd-signature-symbol">:</span> <a href="infoobject.html" class="tsd-signature-type">InfoObject</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:179</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:302</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="required" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> required</h3>
-					<div class="tsd-signature tsd-kind-icon">required<span class="tsd-signature-symbol">:</span> <a href="../globals.html#contentdescriptorobjectrequired" class="tsd-signature-type">ContentDescriptorObjectRequired</a></div>
+					<a name="methods" class="tsd-anchor"></a>
+					<h3>methods</h3>
+					<div class="tsd-signature tsd-kind-icon">methods<span class="tsd-signature-symbol">:</span> <a href="../globals.html#methods" class="tsd-signature-type">Methods</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:183</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:304</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="schema" class="tsd-anchor"></a>
-					<h3>schema</h3>
-					<div class="tsd-signature tsd-kind-icon">schema<span class="tsd-signature-symbol">:</span> <a href="jsonschema.html" class="tsd-signature-type">JSONSchema</a></div>
+					<a name="openrpc" class="tsd-anchor"></a>
+					<h3>openrpc</h3>
+					<div class="tsd-signature tsd-kind-icon">openrpc<span class="tsd-signature-symbol">:</span> <a href="../globals.html#openrpc" class="tsd-signature-type">Openrpc</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:182</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:301</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="summary" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> summary</h3>
-					<div class="tsd-signature tsd-kind-icon">summary<span class="tsd-signature-symbol">:</span> <a href="../globals.html#contentdescriptorobjectsummary" class="tsd-signature-type">ContentDescriptorObjectSummary</a></div>
+					<a name="servers" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> servers</h3>
+					<div class="tsd-signature tsd-kind-icon">servers<span class="tsd-signature-symbol">:</span> <a href="../globals.html#servers" class="tsd-signature-type">Servers</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:181</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:303</li>
 						</ul>
 					</aside>
 				</section>
@@ -156,22 +156,22 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-is-external">
-						<a href="contentdescriptorobject.html" class="tsd-kind-icon">Content<wbr>Descriptor<wbr>Object</a>
+						<a href="openrpcdocument.html" class="tsd-kind-icon">Openrpc<wbr>Document</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#description" class="tsd-kind-icon">description</a>
+								<a href="openrpcdocument.html#components" class="tsd-kind-icon">components</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#name" class="tsd-kind-icon">name</a>
+								<a href="openrpcdocument.html#info" class="tsd-kind-icon">info</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#required" class="tsd-kind-icon">required</a>
+								<a href="openrpcdocument.html#methods" class="tsd-kind-icon">methods</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#schema" class="tsd-kind-icon">schema</a>
+								<a href="openrpcdocument.html#openrpc" class="tsd-kind-icon">openrpc</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="contentdescriptorobject.html#summary" class="tsd-kind-icon">summary</a>
+								<a href="openrpcdocument.html#servers" class="tsd-kind-icon">servers</a>
 							</li>
 						</ul>
 					</li>
