--- a/interfaces/tagobject.html
+++ b/interfaces/tagobject.html
@@ -64,14 +64,6 @@
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
-			<section class="tsd-panel tsd-comment">
-				<div class="tsd-comment tsd-typography">
-					<div class="lead">
-						<p>This interface was referenced by <code>undefined</code>&#39;s JSON-Schema definition
-						via the <code>patternProperty</code> &quot;[0-z]+&quot;.</p>
-					</div>
-				</div>
-			</section>
 			<section class="tsd-panel tsd-hierarchy">
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
@@ -79,16 +71,6 @@
 						<span class="target">TagObject</span>
 					</li>
 				</ul>
-			</section>
-			<section class="tsd-panel tsd-kind-interface tsd-is-external">
-				<h3 class="tsd-before-signature">Indexable</h3>
-				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>k: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
-				<div class="tsd-comment tsd-typography">
-					<div class="lead">
-						<p>This interface was referenced by <code>TagObject</code>&#39;s JSON-Schema definition
-						via the <code>patternProperty</code> &quot;^x-&quot;.</p>
-					</div>
-				</div>
 			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
@@ -110,10 +92,10 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="description" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> description</h3>
-					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <a href="../globals.html#tagobjectdescription" class="tsd-signature-type">TagObjectDescription</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:151</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:74</li>
 						</ul>
 					</aside>
 				</section>
@@ -123,17 +105,17 @@
 					<div class="tsd-signature tsd-kind-icon">external<wbr>Docs<span class="tsd-signature-symbol">:</span> <a href="externaldocumentationobject.html" class="tsd-signature-type">ExternalDocumentationObject</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:152</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:75</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="name" class="tsd-anchor"></a>
 					<h3>name</h3>
-					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <a href="../globals.html#tagobjectname" class="tsd-signature-type">TagObjectName</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:150</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:73</li>
 						</ul>
 					</aside>
 				</section>
